# bip_hackathon2026

./: .env.example  .gitignore  CLAUDE_CODE_SPEC.md  PROJECT_DESIGN.md  README.md  TELEGRAM_BOT.md  main.py  pyproject.toml  test_connection.py
data/strategies/: imitative_dataset.json
src/: telegram_bot.py
src/agent/: adaptive_timeout.py  behavior.py  behavior_questionnaire.py  broker.py  config.py  correlation_engine.py  discovery.py  disruptor.py  imitative_layer.py  journal.py  llm_stream.py  loop.py  memory_manager.py  news_log.py  position_manager.py  reasoner.py  sentiment.py  session.py  strategy_library.py  technical_analyser.py  tool_executor.py  user_preference_engine.py
tests/: test_adaptive_timeout.py  test_behavior.py  test_connections.py  test_correlation_engine.py  test_journal.py  test_memory_manager.py  test_news_context_layer.py  test_news_log.py  test_position_manager.py  test_session.py  test_technical_analyser.py  test_telegram_bot.py  test_tool_executor.py  test_user_preference_engine.py
ui/: dashboard.py
