[project]
name = "bip-hackathon2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.4",
    "anthropic>=0.109.1",
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
