[project]
name = "bip-hackathon2026"
version = "0.1.0"
description = "Autonomous trading agent — BIP Hackathon 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.4",
    "anthropic>=0.109.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ollama>=0.5.0",
    "rich>=13.7.0",
    "textual>=0.60.0",
    "python-telegram-bot>=21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
